fix buffering issues on Windows